--- a/Practica2/estil.css
+++ b/Practica2/estil.css
@@ -1,6 +1,20 @@
+@font-face {
+  font-family: 'av';
+  src: url(avengersfont.ttf);
+}
 html {
   height: 100%;
   background-image: url(avengers_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
+}
+html body {
+  text-align: center;
+}
+html body h1 {
+  font-family: av;
+  color: #0000d8;
+  font-size: 100px;
+  text-shadow: yellow 4px 0px 4px;
+  -webkit-text-stroke: 0.5px black;
 }
