--- a/Practica2/estil.less
+++ b/Practica2/estil.less
@@ -1,6 +1,22 @@
+@font-face{
+    font-family: 'av';
+    src: url(./avengersfont.ttf);
+}
 html{
     height: 100%;
     background-image: url(./avengers_bg.png);
     background-repeat: no-repeat;
     background-size: cover;
+
+    body{
+        text-align: center;
+        
+        h1{
+            font-family: av;
+            color: rgb(0, 0, 216);
+            font-size: 100px;
+            text-shadow: yellow 4px 0px 4px;
+            -webkit-text-stroke: 0.5px black;
+        }
+    }
 }
