--- a/Practica2/estil.css
+++ b/Practica2/estil.css
@@ -3,7 +3,7 @@
   src: url(avengersfont.ttf);
 }
 html {
-  height: 100%;
+  height: 100vh;
   background-image: url(avengers_bg.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -17,4 +17,19 @@ html body h1 {
   font-size: 100px;
   text-shadow: yellow 4px 0px 4px;
   -webkit-text-stroke: 0.5px black;
+}
+html body main {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+}
+html body main section {
+  display: grid;
+  grid-template-columns: 1fr 30px 1fr 30px 1fr;
+  grid-column: 2/3;
+}
+html body main section picture {
+  width: 100%;
+  border-radius: 20px;
+  background-color: black;
+  box-shadow: 0.5px 0.5px 0.5px 2.3px #ffa600, 4px 4px 4px 8px #8400ff;
 }
