--- a/Practica2/estil.less
+++ b/Practica2/estil.less
@@ -2,8 +2,9 @@
     font-family: 'av';
     src: url(./avengersfont.ttf);
 }
+
 html{
-    height: 100%;
+    height: 100vh;
     background-image: url(./avengers_bg.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -17,6 +18,26 @@ html{
             font-size: 100px;
             text-shadow: yellow 4px 0px 4px;
             -webkit-text-stroke: 0.5px black;
+        }
+
+        main{
+            display: grid;
+            grid-template-columns:1fr 2fr 1fr;
+
+            section{
+                display: grid;
+                grid-template-columns:1fr 30px 1fr 30px 1fr;
+                grid-column: 2/3;
+
+                picture{
+                    width: 100%;
+                    
+                    border-radius: 20px;
+
+                    background-color: black;
+                    box-shadow: 0.5px 0.5px 0.5px 2.3px rgb(255, 166, 0),4px 4px 4px 8px rgb(132, 0, 255);
+                }
+            }
         }
     }
 }
