--- a/Practica2/estil.less
+++ b/Practica2/estil.less
@@ -4,9 +4,9 @@
 }
 
 html{
-    height: 100vh;
+    height: 100%;
     background-image: url(./avengers_bg.png);
-    background-repeat: no-repeat;
+    background-repeat: repeat;
     background-size: cover;
 
     body{
@@ -21,15 +21,15 @@ html{
         }
 
         main{
-            display: grid;
-            grid-template-columns:1fr 2fr 1fr;
-
+            margin-left: 200px;
+            
             section{
                 display: grid;
-                grid-template-columns:1fr 30px 1fr 30px 1fr;
+                grid-template-columns:25% 25% 25%;
                 grid-column: 2/3;
-
+                grid-gap: 50px;
                 picture{
+                    overflow: hidden;
                     width: 100%;
                     
                     border-radius: 20px;
