--- a/Practica2/estil.less
+++ b/Practica2/estil.less
@@ -9,6 +9,7 @@ html{
     background-repeat: repeat;
     background-size: cover;
 
+
     body{
         text-align: center;
         
@@ -36,8 +37,34 @@ html{
 
                     background-color: black;
                     box-shadow: 0.5px 0.5px 0.5px 2.3px rgb(255, 166, 0),4px 4px 4px 8px rgb(132, 0, 255);
+
+                    // div{
+                    //     color: white;
+                    // }
                 }
             }
         }
+    }
+}
+
+@media (min-width: 1601px){
+    .lletres{
+        display: flex;
+        flex-direction: row;
+        color: white;
+        justify-content: center;
+
+        p:nth-child(2){
+            font-size: 40px;
+            margin-left: 20px;
+        }
+
+        p:nth-child(1){
+            font-size: 100px;
+        }
+
+        font-family: av;
+            color: rgb(0, 0, 216);
+            text-shadow: yellow 4px 0px 4px;
     }
 }
