--- a/Practica2/estil.less
+++ b/Practica2/estil.less
@@ -22,7 +22,7 @@ html{
         }
 
         main{
-            margin-left: 300px;
+            margin-left: 220px;
             
             section{
                 display: grid;
@@ -37,10 +37,6 @@ html{
 
                     background-color: black;
                     box-shadow: 0.5px 0.5px 0.5px 2.3px rgb(255, 166, 0),4px 4px 4px 8px rgb(132, 0, 255);
-
-                    // div{
-                    //     color: white;
-                    // }
                 }
             }
         }
@@ -48,23 +44,23 @@ html{
 }
 
 @media (min-width: 1601px){
-    .lletres{
+    p{
+        font-family: av;
+        color: rgb(0, 0, 216);
+        text-shadow: yellow 4px 0px 4px;
+
         display: flex;
         flex-direction: row;
-        color: white;
-        justify-content: center;
+        justify-content: centerx;
+        font-size: 70px;
 
         p:nth-child(2){
-            font-size: 40px;
-            margin-left: 20px;
+            margin-left: 40px;
         }
 
         p:nth-child(1){
-            font-size: 100px;
+            font-size: 150px;
+            align-items: center;
         }
-
-        font-family: av;
-            color: rgb(0, 0, 216);
-            text-shadow: yellow 4px 0px 4px;
     }
 }
