--- a/Practica2/estil.css
+++ b/Practica2/estil.css
@@ -19,7 +19,7 @@ html body h1 {
   -webkit-text-stroke: 0.5px black;
 }
 html body main {
-  margin-left: 300px;
+  margin-left: 220px;
 }
 html body main section {
   display: grid;
@@ -35,20 +35,20 @@ html body main section picture {
   box-shadow: 0.5px 0.5px 0.5px 2.3px #ffa600, 4px 4px 4px 8px #8400ff;
 }
 @media (min-width: 1601px) {
-  .lletres {
-    display: flex;
-    flex-direction: row;
-    color: white;
-    justify-content: center;
+  p {
     font-family: av;
     color: #0000d8;
     text-shadow: yellow 4px 0px 4px;
+    display: flex;
+    flex-direction: row;
+    justify-content: centerx;
+    font-size: 70px;
   }
-  .lletres p:nth-child(2) {
-    font-size: 40px;
-    margin-left: 20px;
+  p p:nth-child(2) {
+    margin-left: 40px;
   }
-  .lletres p:nth-child(1) {
-    font-size: 100px;
+  p p:nth-child(1) {
+    font-size: 150px;
+    align-items: center;
   }
 }
