--- a/Practica3/estil.less
+++ b/Practica3/estil.less
@@ -99,6 +99,25 @@ html{
                     width: 400px;
                 }
             }
+
+            #ourclients{
+                h1{
+                    font-family: 'Lato', sans-serif;
+
+                    hr{
+                        width: 60px;
+    
+                        
+                    }
+                    .grossor{
+                        border: 2px solid black;
+                    }
+                }
+
+                img{
+                    height: 250px;
+                }
+            }
         }
     }
 }
