--- a/Practica3/estil.css
+++ b/Practica3/estil.css
@@ -21,12 +21,14 @@
 }
 html header {
   font-family: 'Lato', sans-serif;
+  background-color: #494848;
+  overflow: hidden;
 }
 html main #carrousel {
   font-family: 'Lato', sans-serif;
 }
 html main #carrousel .shadow-lg {
-  text-shadow: 5px 4px 3px rgba(0, 0, 0, 0.7);
+  text-shadow: 5px 4px 3px rgba(39, 36, 36, 0.7);
 }
 html main #carrousel h1 {
   font-size: 70px;
@@ -82,8 +84,10 @@ html main #part2 #recomendacions p {
   font-size: 22px;
 }
 html main #part2 #recomendacions img {
-  height: 300px;
-  width: 400px;
+  height: 100%;
+}
+html main #part2 #recomendacions img:hover {
+  background-color: orange;
 }
 html main #part2 #ourclients h1 {
   font-family: 'Lato', sans-serif;
@@ -95,6 +99,28 @@ html main #part2 #ourclients h1 .grossor {
   border: 2px solid black;
 }
 html main #part2 #ourclients img {
-  height: 200px;
-  overflow: hidden;
+  height: 250px;
+}
+html main #part2 #ourclients #focs {
+  background-image: url(imatges/bengala/descarga.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+html main #part2 #ourclients #focs h1 {
+  color: white;
+  font-size: 18px;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+html main #part2 #ourclients #focs h2 {
+  font-size: 18px;
+  font-family: 'Lato', sans-serif;
+  font-family: 'Roboto', sans-serif;
+}
+html main #part2 #facts h1 {
+  font-size: 25px;
+}
+html main #part2 #facts h2 {
+  font-size: 18px;
 }
