--- a/Practica3/estil.less
+++ b/Practica3/estil.less
@@ -152,6 +152,11 @@ html{
                 h2{
                     font-size: 18px;
                 }
+
+                #row2{
+                    border: 1px solid black;
+                    width: 70px;
+                }
             }
         }
     }
