--- a/Practica3/estil.css
+++ b/Practica3/estil.css
@@ -124,3 +124,7 @@ html main #part2 #facts h1 {
 html main #part2 #facts h2 {
   font-size: 18px;
 }
+html main #part2 #facts #row2 {
+  border: 1px solid black;
+  width: 70px;
+}
