--- a/Practica3/estil.less
+++ b/Practica3/estil.less
@@ -153,9 +153,8 @@ html{
                     font-size: 18px;
                 }
 
-                #row2{
-                    border: 1px solid black;
-                    width: 70px;
+                #acc{
+                    width: 600px;
                 }
             }
         }
