--- a/Practica3/estil.css
+++ b/Practica3/estil.css
@@ -86,7 +86,11 @@ html main #part2 #recomendacions img {
   height: 100%;
 }
 html main #part2 #recomendacions img:hover::after {
+  content: "";
+  display: block;
   background-color: aqua;
+  width: 100%;
+  height: 100%;
 }
 html main #part2 #ourclients h1 {
   font-family: 'Lato', sans-serif;
