--- a/Practica3/estil.less
+++ b/Practica3/estil.less
@@ -97,11 +97,16 @@ html{
 
                 img{
                     height: 100%;
+                
+                    &:hover::after{
+                        content: "";
+                        display: block;
+                        background-color: aqua;
+                        width: 100%;
+                        height: 100%;
+                    }
                 }
-
-                img:hover::after{
-                    background-color: aqua;
-                }
+                
             }
 
             #ourclients{
