--- a/Practica3/estil.less
+++ b/Practica3/estil.less
@@ -56,7 +56,7 @@ html{
                     height: 40px;
                 }
 
-                P{
+                p{
                     font-size: 20px;
                 }
             }
@@ -187,5 +187,35 @@ html{
         svg{
             width: 30px;
         }
+    }
+}
+
+@media only screen and (min-width: 576px) and (max-width: 768px){
+    html main #part2 #ourservice p{
+        font-size: 17px;
+    }
+    html main #part2 #barres p{
+        font-size: 12px;
+        white-space: nowrap;
+    }
+
+    html main #part2 #barres .altura{
+        height: 25px;
+    }
+
+        html main #part2 #recomendacions p{
+        font-size: 17px;
+    }
+
+    html main #part2 #facts #acc{
+        width: 400px;
+    }
+
+    html main #part2 #ourclients #focs h1{
+        font-size: 15px;
+    }
+
+    html main #part2 #ourclients #focs h2{
+        font-size: 15px;
     }
 }
