--- a/Practica3/estil.css
+++ b/Practica3/estil.css
@@ -56,7 +56,7 @@ html main #part2 #ourservice p {
 html main #part2 #barres .altura {
   height: 40px;
 }
-html main #part2 #barres P {
+html main #part2 #barres p {
   font-size: 20px;
 }
 html main #part2 #emotes .w-foto {
@@ -149,4 +149,28 @@ html footer h1 {
 }
 html footer svg {
   width: 30px;
+}
+@media only screen and (min-width: 576px) and (max-width: 768px) {
+  html main #part2 #ourservice p {
+    font-size: 17px;
+  }
+  html main #part2 #barres p {
+    font-size: 12px;
+    white-space: nowrap;
+  }
+  html main #part2 #barres .altura {
+    height: 25px;
+  }
+  html main #part2 #recomendacions p {
+    font-size: 17px;
+  }
+  html main #part2 #facts #acc {
+    width: 400px;
+  }
+  html main #part2 #ourclients #focs h1 {
+    font-size: 15px;
+  }
+  html main #part2 #ourclients #focs h2 {
+    font-size: 15px;
+  }
 }
