--- a/Practica2/estil.less
+++ b/Practica2/estil.less
@@ -9,58 +9,74 @@ html{
     background-repeat: repeat;
     background-size: cover;
 
-
     body{
-        text-align: center;
-        
-        h1{
-            font-family: av;
-            color: rgb(0, 0, 216);
-            font-size: 100px;
-            text-shadow: yellow 4px 0px 4px;
-            -webkit-text-stroke: 0.5px black;
+        header{
+            text-align: center;
+
+            h1{
+                font-family: av;
+                color: rgb(0, 0, 216);
+                font-size: 100px;
+                text-shadow: yellow 4px 0px 4px;
+                -webkit-text-stroke: 0.5px black;
+            }
         }
 
         main{
-            margin-left: 220px;
-            
-            section{
+            .personatges{
                 display: grid;
-                grid-template-columns:25% 25% 25%;
-                grid-column: 2/3;
-                grid-gap: 50px;
+                grid-template-columns: 1fr 1fr 1fr;
+                justify-items: center;
+                grid-gap: 100px;
+
                 picture{
                     overflow: hidden;
                     width: 100%;
-                    
+
                     border-radius: 20px;
 
                     background-color: black;
                     box-shadow: 0.5px 0.5px 0.5px 2.3px rgb(255, 166, 0),4px 4px 4px 8px rgb(132, 0, 255);
+
+                    display: grid;
+                    place-items: center;
+                    position: relative;
+
+                    .lletres{
+                        position: absolute;
+                        bottom: 60;
+                        white-space: nowrap;
+                        p{
+                            font-family: av;
+                            color: rgb(0, 0, 216);
+                            text-shadow: yellow 4px 0px 4px;
+                            -webkit-text-stroke: 0.5px black;
+
+                            display: inline;
+                            margin-right: 40px; 
+                        }
+
+                        p:first-child{
+                           font-size: 90px;
+                        }
+                        p:last-child{
+                            font-size: 40px;
+                         }
+                    }
                 }
             }
         }
     }
 }
 
-@media (min-width: 1601px){
-    p{
-        font-family: av;
-        color: rgb(0, 0, 216);
-        text-shadow: yellow 4px 0px 4px;
-
-        display: flex;
-        flex-direction: row;
-        justify-content: centerx;
-        font-size: 70px;
-
-        p:nth-child(2){
-            margin-left: 40px;
-        }
-
-        p:nth-child(1){
-            font-size: 150px;
-            align-items: center;
+@media (max-width: 1100px){
+   html{
+    body{
+        main{
+            .personatges{
+                grid-template-columns: 1fr 1fr;
+            }
         }
     }
+   }
 }
