--- a/Practica2/estil.less
+++ b/Practica2/estil.less
@@ -40,6 +40,7 @@ html{
 
                     display: grid;
                     place-items: center;
+                    
                     position: relative;
 
                     .lletres{
@@ -61,7 +62,7 @@ html{
                         }
                         p:last-child{
                             font-size: 40px;
-                         }
+                        }
                     }
                 }
             }
@@ -69,14 +70,71 @@ html{
     }
 }
 
-@media (max-width: 1100px){
+@media (max-width: 1150px) and (min-width: 900px){
    html{
     body{
         main{
             .personatges{
                 grid-template-columns: 1fr 1fr;
+                
+                picture{ 
+                    text-align: center;  
+                    grid-template-columns: 4fr 2fr;
+
+                    img{
+                        grid-column: 2/2;
+                        width: 120px;
+                        height: auto;
+                        place-items: center;
+                    }
+
+                    .lletres{
+                        white-space: normal;
+                        width: 30px;
+                        text-align: center;
+                        align-items: center;
+                        left:140px;
+                        bottom: 20;
+                        
+                        p{
+                            text-shadow: 
+                            -3.5px -3.5px 0 orange,
+                            3.5px -3.5px 0 orange,
+                            -3.5px 3.5px 0 orange,
+                            3.5px 3.5px 0 orange;
+                        }
+
+                        p:first-child{
+                            font-size: 30px;
+                        }
+                         p:last-child{
+                             font-size: 40px;
+                        }
+                    }
+                }
             }
         }
     }
    }
 }
+
+@media (max-width: 900px){
+    html{
+     body{
+         main{
+             .personatges{
+                 grid-template-columns: 1fr;
+                
+                 overflow: scroll;
+                 
+                 picture{
+                    img{
+                        height: 100px;
+                        width: auto;
+                    }
+                 }
+             }
+         }
+     }
+    }
+ }
