--- a/Practica2/estil.css
+++ b/Practica2/estil.css
@@ -53,7 +53,7 @@ html body main .personatges picture .lletres p:first-child {
 html body main .personatges picture .lletres p:last-child {
   font-size: 40px;
 }
-@media (max-width: 1150px) and (min-width: 900px) {
+@media (max-width: 1150px) and (min-width: 730px) {
   html body main .personatges {
     grid-template-columns: 1fr 1fr;
   }
@@ -64,8 +64,11 @@ html body main .personatges picture .lletres p:last-child {
   html body main .personatges picture img {
     grid-column: 2/2;
     width: 120px;
-    height: auto;
-    place-items: center;
+    height: 100%;
+    justify-self: center;
+    align-self: center;
+    display: block;
+    object-fit: contain;
   }
   html body main .personatges picture .lletres {
     white-space: normal;
@@ -85,13 +88,30 @@ html body main .personatges picture .lletres p:last-child {
     font-size: 40px;
   }
 }
-@media (max-width: 900px) {
+@media (max-width: 730px) {
   html body main .personatges {
     grid-template-columns: 1fr;
-    overflow: scroll;
+  }
+  html body main .personatges picture {
+    height: 200px;
+    position: relative;
   }
   html body main .personatges picture img {
-    height: 100px;
+    height: 500px;
     width: auto;
+  }
+  html body main .personatges picture .lletres {
+    position: absolute;
+    z-index: 1;
+  }
+  html body main .personatges picture .lletres p {
+    text-shadow: -3.5px -3.5px 0 orange, 3.5px -3.5px 0 orange, -3.5px 3.5px 0 orange, 3.5px 3.5px 0 orange;
+  }
+  html body main .personatges picture .lletres p:first-child {
+    font-size: 50px;
+  }
+  html body main .personatges picture .lletres p:last-child {
+    font-size: 40px;
+    margin-left: 140px;
   }
 }
