--- a/Practica3/estil.less
+++ b/Practica3/estil.less
@@ -4,7 +4,12 @@
 html{
     header{
         font-family: 'Lato', sans-serif;
-        overflow: hidden;
+        // overflow: hidden;
+
+        .titol {
+            font-size: 25px;
+            line-height: 50px;
+        }
     }
     
     main{
