--- a/Practica3/estil.less
+++ b/Practica3/estil.less
@@ -102,16 +102,12 @@ html{
 
                 img{
                     height: 100%;
-                
-                    &:hover::after{
-                        content: "";
-                        display: block;
-                        background-color: aqua;
-                        width: 100%;
-                        height: 100%;
-                    }
                 }
-                
+
+                .hover:hover{
+                    display: block;
+                    background-color: red;
+                }
             }
 
             #ourclients{
